# opus-native

./: .gitignore  Cargo.toml  LICENSE-BSD  README.md
.github/workflows/: format.yml  rust.yml  test.yml
src/: decoder.rs  decoder_error.rs  encoder.rs  encoder_error.rs  error.rs  lib.rs  math.rs  modes.rs  ogg.rs
src/celt/: decoder.rs  kiss_fft.rs  mdct.rs  mod.rs  mode.rs  pvc.rs
src/celt/comb_filter/: avx.rs  fallback.rs  mod.rs  neon.rs  sse.rs
src/entropy_coder/: decoder.rs  encoder.rs  mod.rs
src/range_coder/: decoder.rs  encoder.rs  mod.rs
src/silk/: decoder.rs  mod.rs
